Add sync handler
